--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.1.1",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@ngrx/effects": "^10.1.1",
     "@ngrx/store": "^10.1.0",
     "bootstrap": "^3.4.1",
     "jquery": "^3.5.1",
