--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.1",
-    "@angular/common": "~10.1.1",
-    "@angular/compiler": "~10.1.1",
-    "@angular/core": "~10.1.1",
-    "@angular/forms": "~10.1.1",
-    "@angular/platform-browser": "~10.1.1",
-    "@angular/platform-browser-dynamic": "~10.1.1",
-    "@angular/router": "~10.1.1",
+    "@angular/animations": "^10.1.6",
+    "@angular/common": "^10.1.6",
+    "@angular/compiler": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/forms": "^10.1.6",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
+    "@angular/router": "^10.1.6",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@ngrx/effects": "^10.1.1",
-    "@ngrx/store": "^10.1.0",
+    "@ngrx/store": "^10.1.1",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
@@ -30,12 +30,12 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.3",
-    "@angular/cli": "~10.1.1",
-    "@angular/compiler-cli": "~10.1.1",
+    "@angular-devkit/build-angular": "^0.1100.4",
+    "@angular/cli": "^10.1.7",
+    "@angular/compiler-cli": "^10.1.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.9",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -47,6 +47,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.5"
   }
 }
