--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "~10.1.1",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
-    "@angular/core": "~10.1.1",
+    "@angular/core": "^10.2.0",
     "@angular/forms": "~10.1.1",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
@@ -27,11 +27,11 @@
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.3",
-    "@angular/cli": "~10.1.1",
+    "@angular/cli": "^10.2.0",
     "@angular/compiler-cli": "~10.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
