--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.5",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
@@ -48,6 +47,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "^4.1.3"
   }
 }
