--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "^10.2.4",
     "@angular/platform-browser-dynamic": "^10.2.4",
     "@angular/router": "^10.2.4",
-    "@ngrx/effects": "^10.1.1",
-    "@ngrx/store": "^10.1.1",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
     "@ngtools/webpack": "^10.2.1",
     "bootstrap": "^3.4.1",
     "jquery": "^3.5.1",
@@ -34,6 +34,7 @@
     "@angular-devkit/build-angular": "^0.1002.1",
     "@angular/cli": "^10.2.1",
     "@angular/compiler-cli": "^10.2.4",
+    "@ngrx/store-devtools": "^10.1.2",
     "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.0",
