--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^10.2.4",
     "@angular/router": "^10.2.4",
     "@ngrx/effects": "^10.1.2",
+    "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngtools/webpack": "^10.2.1",
     "bootstrap": "^3.4.1",
