--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run MyTestSite:serve-ssr",
+    "serve:ssr": "node dist/MyTestSite/server/main.js",
+    "build:ssr": "ng build --prod && ng run MyTestSite:server:production",
+    "prerender": "ng run MyTestSite:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,12 +23,16 @@
     "@angular/localize": "^10.2.4",
     "@angular/platform-browser": "^10.2.4",
     "@angular/platform-browser-dynamic": "^10.2.4",
+    "@angular/platform-server": "^10.2.4",
     "@angular/router": "^10.2.4",
     "@ngrx/effects": "^10.1.2",
     "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngtools/webpack": "^10.2.1",
+    "@nguniversal/express-engine": "^10.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "bootstrap": "^3.4.1",
+    "express": "^4.15.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.3",
@@ -36,6 +44,8 @@
     "@angular/cli": "^10.2.1",
     "@angular/compiler-cli": "^10.2.4",
     "@ngrx/store-devtools": "^10.1.2",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.0",
